# VM

./: .gitignore  AGENTS.md  CMakeLists.txt  DESIGN.md  KAIS_VS_LUA.md  LANG_DESIGN.md  README.md  SYNTAX.md  ast.hpp  calculator.kai  calculator.lua  chunk.cpp  chunk.hpp  compiler.cpp  compiler.hpp  lexer.hpp  main.cpp  value.hpp  vm.cpp
frontend/: ast.cpp  ast.hpp  compiler.cpp  compiler.hpp  lexer.cpp  parser.cpp  parser.hpp
plans/: README.md  closures.md  coroutines.md  gc.md
vm/: chunk.cpp  chunk.hpp  debug.cpp  debug.hpp  mbs.cpp  mbs.hpp  obj.hpp  value.hpp  vm.cpp  vm.hpp
